--- a/src/main/webapp/Formatador.xhtml
+++ b/src/main/webapp/Formatador.xhtml
@@ -12,7 +12,7 @@
 		<h:inputText id="valor" value="#{formatadorController.valor}"/>
 		<h:commandButton value="Formatar" action="#{formatadorController.formatar}"/>
 		<br/>
-		<h:outputLabel value="Valor: #{formatadorController.valorFormatado}"></h:outputLabel>
+		<h:outputLabel value="Valor: #{formatadorController.valorFormatado}"></h:outputLabel> <!-- arrumar -->"
 	</h:form>
 
 </body>
